--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://vk2533120:5eT8M9fRm1xPS4Np@cluster0.6qftpfb.mongodb.net/smartExpense?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://vk2533120:5eT8M9fRm1xPS4Np@cluster0.6qftpfb.mongodb.net/sample_mflix?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
